# music_online_platform

./: .flake8  .gitignore  Pipfile  README.md  command_to_run_db.txt  dodo.py  pyproject.toml  requirements.txt  window-domain.pot
docs/source/: api.rst  conf.py  index.rst  modules.rst
l10n/ru_RU.UTF-8/LC_MESSAGES/: window-domain.po
music_db/: Music.py
src/client/: AddMusicWindow.py  MainWindow.py  Music_User.py  SockedWrapper.py  __init__.py  __main__.py  client.py
src/music_db/: Music.py  MusicFileDB.py  MusicSQLDB.py  __init__.py  __main__.py
src/server/: ConectProcessor.py  Master_Server.py  MusicServer.py  __main__.py  server.py
tests/: test_music.py  test_server.py
