[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "music_online_platform"
version = "0.1.0"
authors = [
    { name = "Mihail", email = "mihuil_00@mail.ru" },
    { name = "portholl", email = "s02220028@gse.cs.msu.ru" }
]
description = "My awesome package"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/MikleMasterMind/music_online_platform"

[tool.setuptools]
packages = ["src"] 
package-dir = { "" = "." }

[tool.setuptools.package-data]
my_package = ["Pipfile*", "l10n/*", "*.pot"] 